shellfirm/src/bin/cmd/snapshots/shellfirm__cmd__command__test_command_cli_command__can_run_pre_command.snap
---
source: shellfirm/src/bin/cmd/command.rs
expression: "execute(\"rm -rf /\", &settings, &settings.get_active_checks().unwrap(), true)"
---
Ok(
    CmdExit {
        code: 0,
        message: Some(
            "---\n- id: \"fs:recursively_delete\"\n  test: \"rm\\\\s{1,}(-R|-r|-fR|-fr|-Rf|-rf)\\\\s*(\\\\*|\\\\.{1,}|/)\\\\s*$\"\n  description: You are going to delete everything in the path.\n  from: fs\n  challenge: Math\n  filters:\n    IsExists: \"3\"\n",
        ),
    },
)
