shellfirm/src/bin/cmd/snapshots/shellfirm__cmd__command__test_command_cli_command__can_run_pre_command_without_match.snap
---
source: shellfirm/src/bin/cmd/command.rs
expression: "run_pre_command(\"command\", &settings, &settings.get_active_checks().unwrap(),\n    true)"
---
Ok(
    CmdExit {
        code: 0,
        message: Some(
            "---\n[]\n",
        ),
    },
)
